overflow issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -766,4 +766,5 @@ pre code.hljs {
 
 div.ad {
   margin: 0 auto;
+  overflow: hidden;
 }
